fix hero icon on mobile and add missing navbar socials (#53)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,12 @@
   .bg-temurin-hero {
     background-image: url("/images/backgrounds/temurin-hero-img.png");
   }
+
+  @media (width <= 640px) {
+    .bg-temurin-hero {
+      background-image: none;
+    }
+  }
 }
 
 /* CSS Variables */
